--- a/scripts/sec_5.2/config/toy-paper-run-50.yaml
+++ b/scripts/sec_5.2/config/toy-paper-run-50.yaml
@@ -3,8 +3,10 @@ default_parameters: &default_parameters
     kernel: 'norm_fixed_var_w_skip'
     n_hidden: 512
 
-default_theta_lr: &default_theta_lr
+default_theta_parameters: &default_theta_parameters
     lr: 1e-5
+    lr_decay: False
+    clip: False
 
 experiment:
     n_reruns: 10
@@ -20,14 +22,37 @@ pvi:
         n_particles: 100
         <<: *default_parameters
     theta_opt:
-        <<: *default_theta_lr
+        <<: *default_theta_parameters
         optimizer: 'rmsprop'
-        lr_decay: False
-        regularization: 1e-8
-        clip: False
     r_opt:
         lr: 1e-2
         regularization: 1e-8
+    r_precon:
+        type: 'rms'
+        max_norm: 1.
+        agg: 'mean'
+    extra_alg:
+
+nf_pvi:
+    algorithm: 'nf_pvi'
+    model: 
+        use_particles: True
+        n_particles: 100
+        <<: *default_parameters
+        # NF-specific parameters
+        n_flow_layers: 4
+        flow_hidden_dim: 64
+        particle_dim: 2  # Dimension of ρ particles that parameterize flows
+    theta_opt:
+        <<: *default_theta_parameters
+        optimizer: 'rmsprop'
+    r_opt:
+        lr: 1e-2
+        regularization: 1e-8
+    r_precon:
+        type: 'rms'
+        max_norm: 1.
+        agg: 'mean'
     extra_alg:
 
 wgf_gmm:
@@ -38,10 +63,8 @@ wgf_gmm:
         n_components: 10
         <<: *default_parameters
     theta_opt:
-        <<: *default_theta_lr
+        <<: *default_theta_parameters
         optimizer: 'rmsprop'
-        lr_decay: False
-        regularization: 1e-8
         clip: True  # Enable gradient clipping
         max_clip: 1e-3  # Clip gradients to max norm of 1.0
     r_opt:
@@ -61,11 +84,8 @@ svi:
     dual:
         n_hidden: 512
     theta_opt:
-        <<: *default_theta_lr
+        <<: *default_theta_parameters
         optimizer: 'rmsprop'
-        lr_decay: False
-        regularization: 1e-8
-        clip: False
     extra_alg:
 
 uvi:
@@ -74,11 +94,8 @@ uvi:
         use_particles: False
         <<: *default_parameters
     theta_opt:
-        <<: *default_theta_lr
+        <<: *default_theta_parameters
         optimizer: 'rmsprop'
-        lr_decay: False
-        regularization: 1e-8
-        clip: False
     extra_alg:
 
 sm:
@@ -87,12 +104,10 @@ sm:
         use_particles: False
         <<: *default_parameters
     theta_opt:
-        <<: *default_theta_lr
+        <<: *default_theta_parameters
         optimizer: 'rmsprop'
         lr_decay: True
         min_lr: 1e-5
-        regularization: 1e-8
-        clip: False
     dual:
         n_hidden: 512
     dual_opt:
